From alignment 49% Fixed

--- a/app/openemr/static/openemr/scss/login.scss
+++ b/app/openemr/static/openemr/scss/login.scss
@@ -5,7 +5,7 @@ $break-large: 600px;
 
 .halfpage {
     @media screen and (min-width: $break-large) {
-        width: 50%;
+        width: 49%;
         display: inline-block;
         padding: 50px;
         vertical-align:top;
